force-app/main/default/objects/QuoteLineItem/fields/AbonnementMois__c.field-meta.xml
<CustomField>
    <fullName>AbonnementMois__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Abonnement (€/mois)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>