force-app/main/default/objects/QuoteLineItem/fields/Budget_Acheminement_Annuel_HTT__c.field-meta.xml
<CustomField>
    <fullName>Budget_Acheminement_Annuel_HTT__c</fullName>
    <formula>(TURPE_Fixe__c *12) + (TURPE_Variable__c* CAR_New__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Acheminement Annuel (€/HTT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>