force-app/main/default/objects/QuoteLineItem/fields/Budget_Acheminement_Gaz__c.field-meta.xml
<CustomField>
    <fullName>Budget_Acheminement_Gaz__c</fullName>
    <formula>AbonnementMois__c * 12 + FraisTransportDistributionCapacite__c * CARGaz__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Acheminement Gaz</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>