force-app/main/default/objects/QuoteLineItem/fields/Budget_Energie_Gaz__c.field-meta.xml
<CustomField>
    <fullName>Budget_Energie_Gaz__c</fullName>
    <formula>CARGaz__c * (PrixMolecule__c + CeeMwh__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Energie Gaz</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>