force-app/main/default/objects/QuoteLineItem/fields/Budget_Taxes_annuel_HTVA__c.field-meta.xml
<CustomField>
    <fullName>Budget_Taxes_annuel_HTVA__c</fullName>
    <formula>(CSPE__c * CAR_New__c)+ (TDCFE__c*CAR_New__c) + (TCCFE__c*CAR_New__c)+ CTA_new__c</formula>
    <label>Budget Taxes annuel (€/HTVA)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>