force-app/main/default/objects/QuoteLineItem/fields/Budget_Taxes_et_Contribution_Gaz__c.field-meta.xml
<CustomField>
    <fullName>Budget_Taxes_et_Contribution_Gaz__c</fullName>
    <formula>TICGN__c * CARGaz__c + CTA__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Taxes et Contribution Gaz</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>