force-app/main/default/objects/QuoteLineItem/fields/Budget_TTC__c.field-meta.xml
<CustomField>
    <fullName>Budget_TTC__c</fullName>
    <label>Budget TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>