force-app/main/default/objects/QuoteLineItem/fields/BudgetFourniture__c.field-meta.xml
<CustomField>
    <fullName>BudgetFourniture__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Budget Fourniture (€/an)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>