force-app/main/default/objects/QuoteLineItem/fields/BudgetGazNaturelHTVA__c.field-meta.xml
<CustomField>
    <fullName>BudgetGazNaturelHTVA__c</fullName>
    <label>Budget gaz naturel HTVA (€/an)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>