force-app/main/default/objects/QuoteLineItem/fields/BudgetgazNaturelHTVAAn__c.field-meta.xml
<CustomField>
    <fullName>BudgetgazNaturelHTVAAn__c</fullName>
    <formula>( PrixMolecule__c * CARGaz__c )+
( FraisTransportDistributionCapacite__c *CARGaz__c)+
( CeeMwh__c *CARGaz__c) +
( TICGN__c * CARGaz__c)+
( CTA__c *CARGaz__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget gaz naturel HTVA (€/an)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>