force-app/main/default/objects/QuoteLineItem/fields/BudgetHTTan__c.field-meta.xml
<CustomField>
    <fullName>BudgetHTTan__c</fullName>
    <formula>BudgetFourniture__c +BudgetObligationsMWH__c + Budget_Acheminement_Annuel_HTT__c + Budget_Taxes_annuel_HTVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Annuel Estimé + Obligations(€/an)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>