force-app/main/default/objects/QuoteLineItem/fields/BudgetObligationsMWH__c.field-meta.xml
<CustomField>
    <fullName>BudgetObligationsMWH__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Budget CEE + Capacité</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>