force-app/main/default/objects/QuoteLineItem/fields/Capa_Pointes__c.field-meta.xml
<CustomField>
    <fullName>Capa_Pointes__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Capacité Pointes (en €/MWh)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>