force-app/main/default/objects/QuoteLineItem/fields/CAR_New__c.field-meta.xml
<CustomField>
    <fullName>CAR_New__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CAR</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>