force-app/main/default/objects/QuoteLineItem/fields/CARGaz__c.field-meta.xml
<CustomField>
    <fullName>CARGaz__c</fullName>
    <label>CAR</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>