force-app/main/default/objects/QuoteLineItem/fields/CeeMwh__c.field-meta.xml
<CustomField>
    <fullName>CeeMwh__c</fullName>
    <defaultValue>0.000</defaultValue>
    <label>CEE (en €/MWh)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>