force-app/main/default/objects/QuoteLineItem/fields/Commission_Endesa_Elec_Souhaitee__c.field-meta.xml
<CustomField>
    <fullName>Commission_Endesa_Elec_Souhaitee__c</fullName>
    <label>Commission Endesa Elec souhaitée</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>