force-app/main/default/objects/QuoteLineItem/fields/Conso_HCE__c.field-meta.xml
<CustomField>
    <fullName>Conso_HCE__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Conso HCE</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>