force-app/main/default/objects/QuoteLineItem/fields/Conso_HPE__c.field-meta.xml
<CustomField>
    <fullName>Conso_HPE__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Conso HPE</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>