force-app/main/default/objects/QuoteLineItem/fields/CoutDeCapacite__c.field-meta.xml
<CustomField>
    <fullName>CoutDeCapacite__c</fullName>
    <label>Cout De Capacité</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>