force-app/main/default/objects/QuoteLineItem/fields/CSPE__c.field-meta.xml
<CustomField>
    <fullName>CSPE__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CSPE</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>