force-app/main/default/objects/QuoteLineItem/fields/CTA__c.field-meta.xml
<CustomField>
    <fullName>CTA__c</fullName>
    <label>CTA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>