force-app/main/default/objects/QuoteLineItem/fields/CTA_Mensuel__c.field-meta.xml
<CustomField>
    <fullName>CTA_Mensuel__c</fullName>
    <formula>(15/100) * ( TURPE_Fixe__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CTA Mensuel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>