force-app/main/default/objects/QuoteLineItem/fields/CTA_Mensuel_ELEC__c.field-meta.xml
<CustomField>
    <fullName>CTA_Mensuel_ELEC__c</fullName>
    <label>CTA Mensuel ELEC</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>