force-app/main/default/objects/QuoteLineItem/fields/CTA_new__c.field-meta.xml
<CustomField>
    <fullName>CTA_new__c</fullName>
    <formula>(15/100) * ( TURPE_Fixe__c*12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CTA Annuel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>