force-app/main/default/objects/QuoteLineItem/fields/DateAnalyseFrom__c.field-meta.xml
<CustomField>
    <fullName>DateAnalyseFrom__c</fullName>
    <description>Date de début de l&apos;analyse TURPE</description>
    <inlineHelpText>Date de début de l&apos;analyse TURPE</inlineHelpText>
    <label>Début Date Analyse</label>
    <type>Date</type>
</CustomField>