force-app/main/default/objects/QuoteLineItem/fields/DateAnalyseTo__c.field-meta.xml
<CustomField>
    <fullName>DateAnalyseTo__c</fullName>
    <description>Date de fin de l&apos;analyse TURPE</description>
    <inlineHelpText>Date de fin de l&apos;analyse TURPE</inlineHelpText>
    <label>Fin Date Analyse</label>
    <type>Date</type>
</CustomField>