force-app/main/default/objects/QuoteLineItem/fields/DateAppel__c.field-meta.xml
<CustomField>
    <fullName>DateAppel__c</fullName>
    <label>Date de l&apos;Appel</label>
    <type>Date</type>
</CustomField>