force-app/main/default/objects/QuoteLineItem/fields/DatePremierAppel__c.field-meta.xml
<CustomField>
    <fullName>DatePremierAppel__c</fullName>
    <description>Date du Premier Appel effectué à Homeys</description>
    <inlineHelpText>Date du Premier Appel effectué à Homeys</inlineHelpText>
    <label>Date du Premier Appel</label>
    <type>Date</type>
</CustomField>