force-app/main/default/objects/QuoteLineItem/fields/DebutDeFourniture__c.field-meta.xml
<CustomField>
    <fullName>DebutDeFourniture__c</fullName>
    <label>Début de fourniture</label>
    <type>Date</type>
</CustomField>