force-app/main/default/objects/QuoteLineItem/fields/DureeEngagement__c.field-meta.xml
<CustomField>
    <fullName>DureeEngagement__c</fullName>
    <label>Durée d&apos;engagement (en mois)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>