force-app/main/default/objects/QuoteLineItem/fields/EconomieIdentifieNet__c.field-meta.xml
<CustomField>
    <fullName>EconomieIdentifieNet__c</fullName>
    <label>Economie identifiée net (€HT/an)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>