force-app/main/default/objects/QuoteLineItem/fields/FraisTransportDistributionCapacite__c.field-meta.xml
<CustomField>
    <fullName>FraisTransportDistributionCapacite__c</fullName>
    <label>Frais de distribution variable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>