force-app/main/default/objects/QuoteLineItem/fields/HCEOptimal__c.field-meta.xml
<CustomField>
    <fullName>HCEOptimal__c</fullName>
    <label>HCE Optimal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>