force-app/main/default/objects/QuoteLineItem/fields/HCHActuel__c.field-meta.xml
<CustomField>
    <fullName>HCHActuel__c</fullName>
    <label>HCH Actuel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>