force-app/main/default/objects/QuoteLineItem/fields/HCHOptimal__c.field-meta.xml
<CustomField>
    <fullName>HCHOptimal__c</fullName>
    <label>HCH Optimal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>