force-app/main/default/objects/QuoteLineItem/fields/HPHActuel__c.field-meta.xml
<CustomField>
    <fullName>HPHActuel__c</fullName>
    <label>HPH Actuel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>