force-app/main/default/objects/QuoteLineItem/fields/IdAnalyse__c.field-meta.xml
<CustomField>
    <fullName>IdAnalyse__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>ID Externe utilisé par les process Homeys pour le TURPE</description>
    <externalId>true</externalId>
    <inlineHelpText>ID Externe utilisé par les process Homeys pour le TURPE</inlineHelpText>
    <label>Id Analyse</label>
    <length>24</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>