force-app/main/default/objects/QuoteLineItem/fields/Message_retour_optimisation_TURPE__c.field-meta.xml
<CustomField>
    <fullName>Message_retour_optimisation_TURPE__c</fullName>
    <label>Message retour optimisation TURPE</label>
    <type>TextArea</type>
</CustomField>