force-app/main/default/objects/QuoteLineItem/fields/Nouvelle_Echeance__c.field-meta.xml
<CustomField>
    <fullName>Nouvelle_Echeance__c</fullName>
    <label>Nouvelle échéance</label>
    <type>Date</type>
</CustomField>