force-app/main/default/objects/QuoteLineItem/fields/Opportunit__c.field-meta.xml
<CustomField>
    <fullName>Opportunit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Éléments de devis</relationshipLabel>
    <relationshipName>l_ments_de_devis</relationshipName>
    <type>Lookup</type>
</CustomField>