force-app/main/default/objects/QuoteLineItem/fields/PartVariableCSActuel__c.field-meta.xml
<CustomField>
    <fullName>PartVariableCSActuel__c</fullName>
    <label>Part Variable de la CS Actuel (€HT/an)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>