force-app/main/default/objects/QuoteLineItem/fields/PCE__c.field-meta.xml
<CustomField>
    <fullName>PCE__c</fullName>
    <formula>PDE__r.PCE_Refonte__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PCE</label>
    <type>Text</type>
</CustomField>