force-app/main/default/objects/QuoteLineItem/fields/PDE__c.field-meta.xml
<CustomField>
    <fullName>PDE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PDE</label>
    <referenceTo>PDE__c</referenceTo>
    <relationshipLabel>Éléments de devis</relationshipLabel>
    <relationshipName>elements_de_devis</relationshipName>
    <type>Lookup</type>
</CustomField>