force-app/main/default/objects/QuoteLineItem/fields/POINTEOptimal__c.field-meta.xml
<CustomField>
    <fullName>POINTEOptimal__c</fullName>
    <label>POINTE Optimal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>