force-app/main/default/objects/QuoteLineItem/fields/PointesMWh__c.field-meta.xml
<CustomField>
    <fullName>PointesMWh__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pointes (en €/MWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>