force-app/main/default/objects/QuoteLineItem/fields/PrimeoApiCurrentGreenEnergy__c.field-meta.xml
<CustomField>
    <fullName>PrimeoApiCurrentGreenEnergy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primeo Api Current Green Energy</label>
    <type>Checkbox</type>
</CustomField>