force-app/main/default/objects/QuoteLineItem/fields/PrimeoApiCurrentMarkup__c.field-meta.xml
<CustomField>
    <fullName>PrimeoApiCurrentMarkup__c</fullName>
    <label>Primeo Api Current Markup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>