force-app/main/default/objects/QuoteLineItem/fields/PrimeoApiCurrentOfferId__c.field-meta.xml
<CustomField>
    <fullName>PrimeoApiCurrentOfferId__c</fullName>
    <label>PrimeoApiCurrentOfferId</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>