force-app/main/default/objects/QuoteLineItem/fields/PrimeoApiCurrentOppDate__c.field-meta.xml
<CustomField>
    <fullName>PrimeoApiCurrentOppDate__c</fullName>
    <label>Primeo Api Current Opp Date</label>
    <type>Date</type>
</CustomField>