force-app/main/default/objects/QuoteLineItem/fields/PrimeoApiCurrentOppURL__c.field-meta.xml
<CustomField>
    <fullName>PrimeoApiCurrentOppURL__c</fullName>
    <label>Primeo Api Current Opp URL</label>
    <type>Url</type>
</CustomField>