force-app/main/default/objects/QuoteLineItem/fields/PrimeoApiCurrentTransactionId__c.field-meta.xml
<CustomField>
    <fullName>PrimeoApiCurrentTransactionId__c</fullName>
    <label>PrimeoApiCurrentTransactionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>