force-app/main/default/objects/QuoteLineItem/fields/PrimeoApiPriceDate__c.field-meta.xml
<CustomField>
    <fullName>PrimeoApiPriceDate__c</fullName>
    <label>Primeo Api Price Date</label>
    <type>DateTime</type>
</CustomField>