force-app/main/default/objects/QuoteLineItem/fields/PrixBase__c.field-meta.xml
<CustomField>
    <fullName>PrixBase__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prix Base (en €/MWh)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>