force-app/main/default/objects/QuoteLineItem/fields/PrixHC__c.field-meta.xml
<CustomField>
    <fullName>PrixHC__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prix HC (en €/MWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>