force-app/main/default/objects/QuoteLineItem/fields/PrixHchMwh__c.field-meta.xml
<CustomField>
    <fullName>PrixHchMwh__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prix HCH (en €/MWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>