force-app/main/default/objects/QuoteLineItem/fields/PrixHP__c.field-meta.xml
<CustomField>
    <fullName>PrixHP__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prix HP (en €/MWh)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>