force-app/main/default/objects/QuoteLineItem/fields/PrixHpeMwh__c.field-meta.xml
<CustomField>
    <fullName>PrixHpeMwh__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prix HPE (en €/MWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>