force-app/main/default/objects/QuoteLineItem/fields/PrixHphMwh__c.field-meta.xml
<CustomField>
    <fullName>PrixHphMwh__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prix HPH (en €/MWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>