force-app/main/default/objects/QuoteLineItem/fields/PrixMolecule__c.field-meta.xml
<CustomField>
    <fullName>PrixMolecule__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prix molécule (€/MWH)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>