force-app/main/default/objects/QuoteLineItem/fields/Puissance_souscrite__c.field-meta.xml
<CustomField>
    <fullName>Puissance_souscrite__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Puissance souscrite</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>